позиционирование доп информации

--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -420,8 +420,8 @@ display: inline-block;
 border: none;
 width: 40px;
 height: 40px;
-padding: 10px 15px;
-margin: auto;
+padding: 15px 15px;
+// margin: auto;
 cursor: pointer;
 background-color: var(--white);
 border-radius: 50%;
@@ -438,13 +438,13 @@ box-shadow: -3px -6px 195px -13px rgba(212,20,67,0.69);
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, 100%);
+  transform: translate(-50%, -50%);
 
   width: 250px;
  height: 250px;
   background-color: var(--white);
-  border-radius: 10%;
-
+  border-radius: 4%;
+z-index: 100;
   }
 
 
