hero title placed right

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -171,6 +171,7 @@ fill: var(--accent-color);
 .milk-decanter-wrapper{display: inline-flex;
 align-items:center;
 margin-top:19px;
+margin-bottom: 28px;
 
 }
 .hero-left-side{display: inline-flex;
