--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,5 +1,5 @@
 .contacts-cards__section {
-  background-image: linear-gradient(to bottom, #fff 35%, #fff5f6 65%);
+  background-image: linear-gradient(to bottom, #fff 35%, #fff 35%, #FFF5F6 65%, #FFF5F6 65%);
   
 }
 .contacts-cards__list {
@@ -15,8 +15,8 @@
 }
 
 .contacts-cards__item {
-  max-width: 100%;
-  max-height: 100vh;
+  width: 100%;
+  height: 100%;
   
   padding-top: 43px;
   padding-bottom: 43px;
