--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -11,7 +11,11 @@
   }
   &__list {
     margin: -19px;
+    @media screen and (min-width: 480px) {
+      padding-left: 20px;
+    }
     @media screen and(min-width: 768px) {
+      padding-left: 0;
       display: flex;
       margin: -30px;
     }
