--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,21 +1,4 @@
-// h1,
-// h2,
-// h3,
-// h4,
-// h5,
-// h6,
-// p {
-//   margin: 0;
-// }
 
-// ul {
-//   margin: 0;
-//   padding: 0;
-// }
-
-// img {
-//   display: block;
-// }
 
 .links {
   text-decoration: none;
@@ -25,8 +8,6 @@
   list-style: none;
 }
 
-
-/* Contanier 320  добавил _cont*/
 
 .container_cont {
 
@@ -55,9 +36,20 @@
   background: #fff5f6;
   background-repeat: no-repeat;
   background-size: cover;
-  // background-image: url("/images/contacts/bg.png";
-  //  background-image: url('../src/images/bg.png');
+  background: linear-gradient(180deg, rgba(255,255,255,1) 6%, rgba(255,245,246,1) 6%);
+  padding-bottom: 113px;
+  
+  @media screen and(min-width: 768px) {
+    padding-bottom: 158px;
+    background: linear-gradient(180deg, rgba(255,255,255,1) 10%, rgba(255,245,246,1) 10%);
+  }
+  @media screen and(min-width: 1200px) {
+    padding-bottom: 165px;
+    background-image: url('../images/bg.png');
+    background: linear-gradient(180deg, rgba(255,255,255,1) 12%, rgba(255,245,246,1) 12%);
+    }
 }
+
 
 .wrapper-city {
   @media screen and(min-width: 768px) {
@@ -340,57 +332,63 @@
   justify-content: center;
 }
 
-.contacts-btn {
-  min-width: 161px;
-  height: 44px;
-  padding: 12px 20px;
+ .contacts-btn {
+   min-width: 161px;
+   height: 44px;
+   padding: 12px 20px;
 
-  font-family: DM Sans;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 21px;
-  border: 0;
-  cursor: pointer;
-  margin-bottom: 10px;
+   font-family: DM Sans;
+   font-style: normal;
+   font-weight: bold;
+   font-size: 16px;
+   line-height: 21px;
+   border: 0;
+   cursor: pointer;
+   margin-bottom: 10px;
 
-  display: flex;
-  align-items: center;
-  text-align: center;
+   display: flex;
+   align-items: center;
+   text-align: center;
 
-  color: #d41443;
-  background: #ffffff;
+   color: #d41443;
+   background: #ffffff;
 
-  /* color: #ffffff;
-  background-color: #d41342; */
+   border-radius: 22px;
 
-  border-radius: 22px;
+   transition: color 250ms linear;
+   transition: background-color 250ms linear;
 
-  transition: color 25 0ms linear;
-  transition: background-color 250ms linear;
+     @media screen and(min-width: 768px) {
+       margin-right: 15px;
+       margin-bottom: 0;
+     }
 
-    @media screen and(min-width: 768px) {
-      margin-right: 15px;
-      margin-bottom: 0;
-    }
+ }
 
-}
 
-.contacts-btn::after {
-  content: '';
-  width: 8px;
-  height: 10px;
-  margin-left: 10px;
+ .contacts-btn::after {
+   content: '';
+   width: 8px;
+   height: 10px;
+   margin-left: 10px;
+   background-image: url('../images/icon/cont-vector.svg');
 
-  background-image: url('../images/icon/Vector.svg');
+   background-size: contain;
+ }
 
-  background-size: contain;
-}
-.contacts-btn:hover,
-.contacts-btn:focus {
+.contacts-btn:hover ,
+.contacts-btn:focus  {
   color: #ffffff;
   background-color: #d41342;
+  background-image: url('../images/icon/Vector.svg');
 }
+
+.contacts-btn:hover::after ,
+.contacts-btn:focus::after {
+
+  background-image: url('../images/icon/Vector.svg');
+}
+
 
 .franchise {
   min-width: 161px;
@@ -432,13 +430,16 @@
   background-color: inherit;
   /* border: 2px solid #ffffff; */
 
-  background-image: url('../images/icon/Vector.svg');
+   background-image: url('../images/icon/cont-vector.svg');
 
   background-size: contain;
+  
 }
 
-.franchise:hover,
-.franchise:focus {
+
+.franchise:hover::after,
+.franchise:focus::after {
   color: #ffffff;
-  background-color: #d41342;
+   background-color: #d41342;
+   background-image: url('../images/icon/Vector.svg');
 }
