--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,7 @@
 <section class="contacts">
 
   <h2 class="visually-hidden">Адресa Компании</h2>
-  <div class="container">
+  <!-- <div class="container"> -->
 
 
   <!-- <h2 class="visually-hidden">Адресa Компании</h2> добавил _cont-->
@@ -119,13 +119,9 @@
     </div>
 
     <div class="locations">
-      <!-- <form action="https://goodlood.com/" target="_blank">
-      </form> -->
-      <button class="contacts-btn">Our Locations</button>
-      <!-- <form
-        action=""
-        target="_blank"
-      > -->
+        <form action="https://goodlood.com/" target="_blank"> 
+        <button class="contacts-btn loc-btn">Our Locations</button>
+       </form>
     </form>
     <button class="contacts-btn franchise">Franchise</button>
     </div>
