ДОбавил ссылки-якоря

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="about-sect">
     <div class="container">
         <div class="title-container">
             <p class="about-description">tradition and love</p>
