--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,8 +5,8 @@
         made with
         <span class="hero-title-accent">passion</span>
         </h1>
-        <button class="hero-button hero-button-red">Products</button>
-        <button class="hero-button">How it’s made?</button>
+        <a class="hero-button hero-button-red" href="#product-sect">Products</a>
+        <a class="hero-button" href="#about-sect">How it’s made?</a>
 
         <div class="hero-description">
             <picture>
