--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="contacts">
+<section class="contacts" id="contact-sect">
     <div class="container bg-img">
         <h2 hidden>Contacts</h2>
         <ul class="contacts-list">
