--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,19 +7,19 @@
 
       <ul class="nav-list-desktop">
         <li class="nav-item-desktop">
-          <a href="" class="nav-link-desktop active">Home</a>
+          <a href="index.html" class="nav-link-desktop active">Home</a>
         </li>
         <li class="nav-item-desktop">
-          <a href="" class="nav-link-desktop">About us</a>
+          <a href="#about-sect" class="nav-link-desktop">About us</a>
         </li>
         <li class="nav-item-desktop">
-          <a href="" class="nav-link-desktop">How it’s made?</a>
+          <a href="#product-sect" class="nav-link-desktop">How it’s made?</a>
         </li>
         <li class="nav-item-desktop">
-          <a href="" class="nav-link-desktop">Our products</a>
+          <a href="#advantages-sect" class="nav-link-desktop">Our products</a>
         </li>
         <li class="nav-item-desktop">
-          <a href="" class="nav-link-desktop">Contact</a>
+          <a href="#contact-sect" class="nav-link-desktop">Contact</a>
         </li>
       </ul>
     </nav>
