--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products">
+<section class="products" id="product-sect">
   <div class="container">
     <p class="subtitle">100% natural</p>
     <h2 class="title">products</h2>
