готово подробное описание продукта

--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -384,11 +384,7 @@
   align-items: center;
 }
 
-
-
-
 .button-products {
-  
   position: relative;
   display: inline-block;
   border: none;
@@ -400,7 +396,6 @@
   background-color: var(--white);
   border-radius: 50%;
 }
-
 
 
 // ============подробное описание продукта
@@ -420,7 +415,7 @@ display: inline-block;
 border: none;
 width: 40px;
 height: 40px;
-padding: 15px 15px;
+padding: 11px 15px;
 // margin: auto;
 cursor: pointer;
 background-color: var(--white);
@@ -428,112 +423,57 @@ border-radius: 50%;
 }
 
 .del:checked + label {
-background: var(--hero-pink);
-box-shadow: -3px -6px 195px -13px rgba(212,20,67,0.69);
--webkit-box-shadow: -3px -6px 195px -13px rgba(212,20,67,0.69);
--moz-box-shadow: -3px -6px 195px -13px rgba(212,20,67,0.69);
+background: var(--mobile-menu-pseudo-color);
+
 }
 
 .j {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -90%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   width: 250px;
  height: 250px;
   background-color: var(--white);
   border-radius: 4%;
-z-index: 100;
+  z-index: 100;
   }
 
+.product-list {
+  padding: 15px 0;
+  border-radius: 4%;
+  width: 100%;
+  padding: 10px;
+  background: var(--backgroundPink);
+}
 
-
-
-
-
-
-// .product-item {
-//   position: relative;
+.product-list h3 {
+  font-family: Titan One;
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
+  color: var(--dark-pink);
   
-//   width: 100%;
-//   max-width: 300px;
-//   text-align: center;
-//   margin: auto;
 
-//   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: 0 0 10px 0;
+}
 
-//   &.is-hidden {
-//     opacity: 0;
-//     visibility: hidden;
-//     pointer-events: none;
-//   }
-// }
-
-// .product-open {
-//   position: absolute;
-//   display: block;
-//   width: 100%;
-//   max-width: 528px;
-//   max-height: 700px;
+.product-list-color {
+  font-size: 24px;
+  color: var(--dark-pink);
   
-//   left: 50%;
-//   top: 50%;
-//   transform: translate(-50%, -50%);
-//   box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
-// }
+}
 
-// .product-list {
-//   background: var(--pink);
-//   padding: 15px 0;
- 
-// }
-// .product-list h3 {
-//   font-family: Titan One;
-//   font-size: 30px;
-//   font-weight: 400;
-//   color: var(--dark-pink);
-//   margin: 0 0 10px 0;
-// }
+.product-text{
+  margin-top: 10px;
+  color: var(--dark-pink);
+  font-weight: bold;
+    font-size: 14px;
+    line-height: 152%;
+    text-align: center;
+    letter-spacing: 0.04em;
+}
 
-// .product-text{
-//   font-size: 18px;
-//   font-weight: 400;
 
-// }
-
-// .price {
-//   font-size: 36px;
-//   color:var(--dark-pink);
-//   display: block;
-//   margin-top: 12px;;
-//   margin-bottom: 12px;
-// }
-// .product-button {
-//   text-decoration: none;
-//   display: inline-block;
-
-//   padding: 13px 15px;
-//   min-width: 176px;
-//   height: 44px;
-
-//   border-radius: 22px;
-//   font-weight: bold;
-//   font-size: 14px;
-//   text-transform: uppercase;
-
-//   background: var(--dark-pink);
-//   color: var(--white);
-  
-//   cursor: pointer;
-
-//   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-//   &:hover,
-//   &:focus-within {
-//     padding: 16px 15px;
-//     width: 276px;
-//     height: 84px;
-//     font-size: 44px;
-//   }
-// }
