--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -12,7 +12,6 @@
                             <h3 class="products-content-title">ice cream</h3>
                             <p class="products-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
                             <div class="products-icon">
-
                                 <input type="checkbox" id="raz" class="del"/>
                                 <label for="raz" class="button-products del">
                                     <svg class="products-arrow" width="11px" height="10px">
@@ -21,23 +20,13 @@
                                 </label>
                                 <div class="j">
                                     <strong>
-                                        <p class="product-text"> Voluptate ratione enim quaeratsam repu dicta magnam quo in.</p>
-                                        <img src="https://picsum.photos/250/70">
-                                    </strong> 
-                                    <strong><img src="https://picsum.photos/250/70"></strong>
-                                    <strong>Скрытый текст</strong> 
-                                    <strong>Скрытый текст</strong> 
-                                    <strong>
                                         <div class="product-list">
-                                        <h3>Blueberry 🍨</h3>
-                                        <p class="product-text"> Voluptate ratione enim quaeratsam repu dicta magnam quo in.</p>
-                                        
-                            
-                                    </div>
-                                </strong> 
+                                            <h3>Ice cream </h3>
+                                            <img src="https://picsum.photos/250/70">
+                                            <p class="product-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, placeat ex. Quaerat delectus non quo, ut architecto veniam qui iure repellendus pariatur ullam consequuntur, odit porro aliquid perspiciatis, corrupti aperiam.</p>
+                                        </div>
+                                    </strong> 
                                 </div>
-                                
-                                
                             </div>
                         </div>
                     </li>
