--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,12 +1,15 @@
 <section class="page-hero">
     <div class="container">
         <div class="hero-left-side">
-        <h1 class="hero-title">ice cream
+            <div class="padding-left">   
+                <h1 class="hero-title">ice cream
         made with
         <span class="hero-title-accent">passion</span>
         </h1>
         <button class="hero-button hero-button-red">Products</button>
         <button class="hero-button">How it’s made?</button>
+    </div>
+     
 
         <div class="hero-description">
             <picture>
