--- a/src/sass/_page-hero.scss
+++ b/src/sass/_page-hero.scss
@@ -56,6 +56,34 @@
     display: block;
   }
 }
+
+.hero-description_right-side{
+  & .button-products{
+    width: 18px;
+    height: 18px;
+    justify-self: flex-start;
+    align-self: start;
+  }
+  & .right-arrow{
+    font-size: 8px;
+  }
+  display: flex;
+  flex-direction: column;
+}
+
+.milk-description{
+  margin-bottom: 10px;
+  display: block;
+  width: 114px;
+  height: 48px;
+  font-family: DM Sans;
+font-style: normal;
+font-weight: normal;
+font-size: 8px;
+line-height: 150%;
+color: $color-main;
+line-height: 12px;
+}
 @media screen and (min-width:768px){
   .item-places {
     text-align: right;
@@ -142,7 +170,67 @@
 }
 
 @media screen and (min-width:1200px){
+  .circle{
+    width: 538px;
+    height: 538px;
+    left: -260px;
+    bottom: 56px;
+  }
+  .hero-img{
+    left: -135px;
+  }
+  .hero-rs-second{
+    margin-top: -50px;
+  }
+  .padding-left{
+    padding-left: 50px;
+    margin-bottom: 56px;
+  }
+  .hero-description-img{
+    margin-right: 30px;
+    width: 188px;
+    height: 191px;
+  }
+  .hero-description_right-side .button-products {
+    width: 26px;
+    height: 26px;
+  }
 
+  .hero-description_right-side .right-arrow{
+    font-size: 12px;
+  }
+  .hero-description{
+    align-items: center;
+  }
+  .milk-description{
+    font-size: 14px;
+    width: 200px;
+    line-height: 20px;
+    min-height: 78px;
+  }
+  .hero-places-number::before{
+    top: 0px;
+    right: -15px;
+  }
+  .hero-places-number{
+    font-size: 46px;
+    line-height: 53px;
+  }
+
+  .list-places .milk-description {
+    font-size: 14px;
+  }
+  .item-places:not(:last-child){
+    margin-bottom: 30px;
+  }
+  .hero-title{
+    font-size: 38px;
+    width: 277px;
+  }
+
+  .hero-title-accent{
+    font-size: 58px;
+  }
   .page-hero{
     padding-top: 74px;
   }
@@ -152,30 +240,3 @@
    }
 }
 
-.hero-description_right-side{
-  & .button-products{
-    width: 18px;
-    height: 18px;
-    justify-self: flex-start;
-    align-self: start;
-  }
-  & .right-arrow{
-    font-size: 8px;
-  }
-  display: flex;
-  flex-direction: column;
-}
-
-.milk-description{
-  margin-bottom: 10px;
-  display: block;
-  width: 114px;
-  height: 48px;
-  font-family: DM Sans;
-font-style: normal;
-font-weight: normal;
-font-size: 8px;
-line-height: 150%;
-color: $color-main;
-line-height: 12px;
-}
