--- a/src/sass/_page-header.scss
+++ b/src/sass/_page-header.scss
@@ -42,6 +42,7 @@
 }
 
 .nav-link-desktop {
+  transition: all 300ms linear;
   display: flex;
   align-items: center;
   font-family: $main-font-family;
