--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -345,12 +345,13 @@
     color: $color-main;
   }
 
-    .right-arrow:hover,
-    .right-arrow:focus {
+    &:hover .right-arrow,
+  &:focus .right-arrow{
     color: $color-main;
   }
 }
 
 .right-arrow {
+  transition: all 300ms linear;
   color: $color-secondary;
 }
