--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -76,7 +76,7 @@
             
                 </div>
             
-                <div class="girl-img">
+                <div class="girl-wraper">
                     <picture>
                         <source srcset="./images/hero/girl/girl-desktop-pic.webp 1x, 
                                         ./images/hero/girl/girl-desktop-pic@2x.webp 2x"
@@ -95,11 +95,11 @@
                                             ./images/hero/girl/girl-tablet-pic@2x.png 2x" 
                                         media="(min-width:768px)">
             
-                            <img class="ice__cream_img" src="./images/hero/girl/girl-tablet-pic.png" alt="Girl eating ice cream with pleasure">
+                            <img class="girl_img" src="./images/hero/girl/girl-tablet-pic.png" alt="Girl eating ice cream with pleasure">
                     </picture>
                 </div>
             
-                <div class="milk-img">
+                <div class="milk-wraper">
                     <picture>
                         <source srcset="./images/hero/milk/milk-desktop-pic.webp 1x, 
                                         ./images/hero/milk/milk-desktop-pic@2x.webp 2x"
@@ -118,7 +118,7 @@
                                             ./images/hero/milk/milk-tablet-pic@2x.png 2x" 
                                         media="(min-width:768px)">
             
-                            <img class="ice__cream_img" src="./images/hero/milk/milk-tablet-pic.png" alt="Girl eating ice cream with pleasure">
+                            <img class="milk_img" src="./images/hero/milk/milk-tablet-pic.png" alt="Girl eating ice cream with pleasure">
                     </picture>
                 </div>
 
