--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,6 +1,7 @@
 // mobile-hybrit 
 .container {
     width: 100%;
+    // max-width: 320px;
     padding: 0 20px;
     margin: 0 auto;
 }
@@ -8,6 +9,7 @@
 @media screen and (min-width: 480px) {
 
     .container  {
+
         max-width: 480px;
     }
 }
