--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -222,13 +222,14 @@
 .hero__title__btn__wraper {
     display: flex;
     flex-direction: column;
-    z-index: 1;
-  
-  }
+     }
 
 
 // Валентина
-
+// .coutn-wraper {
+//   position: relative;
+//   z-index: 10;
+// }
 .hero-small-list {
   @media screen and (max-width: 767px) {
     display: none;
@@ -286,4 +287,25 @@
   }
 }
 // END Валентина
+
+.bio-title {
+  width: 114px;
+  height: 48;
+
+  // margin-right: 120px;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+
+}
+
+.bio-title-deskr {
+  font-weight: 400;
+font-size: 8px;
+line-height: 150%;
+/* or 12px */
+
+
+color: #FFFFFF;
+}
      
