--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -25,7 +25,7 @@
                 </div>
 
                 <!-- Валентина -->
-                <div>
+                <div class="coutn-wraper">
                     <ul class="hero-small-list list">
                         <li class="hero-small-item">
                             <p class="hero-number">16</p>
@@ -121,6 +121,13 @@
                             <img class="milk_img" src="./images/hero/milk/milk-tablet-pic.png" alt="Girl eating ice cream with pleasure">
                     </picture>
                 </div>
+
+<div class="bio-title">
+    <p class="bio-title-deskr">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+    </p>
+    
+</div>
 
     </div>
     <!-- end hero wraper    -->
