--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -410,13 +410,14 @@
  
 .del:not(:checked) + label,
 .del:checked + label {
-display: inline-block;
+display: flex;
+align-items: center;
+justify-content: center;
 
 border: none;
 width: 40px;
 height: 40px;
-padding: 11px 15px;
-// margin: auto;
+
 cursor: pointer;
 background-color: var(--white);
 border-radius: 50%;
@@ -456,14 +457,16 @@ background: var(--mobile-menu-pseudo-color);
   text-align: center;
   color: var(--dark-pink);
   
-
   margin: 0 0 10px 0;
 }
 
 .product-list-color {
   font-size: 24px;
   color: var(--dark-pink);
-  
+}
+
+.product-img {
+  border-radius: 4%;
 }
 
 .product-text{
