--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -22,7 +22,7 @@
                                     <strong>
                                         <div class="product-list">
                                             <h3>Ice cream </h3>
-                                            <img src="https://picsum.photos/250/70">
+                                            <img class="product-img" src="https://picsum.photos/250/70">
                                             <p class="product-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, placeat ex. Quaerat delectus non quo, ut architecto veniam qui iure repellendus pariatur ullam consequuntur, odit porro aliquid perspiciatis, corrupti aperiam.</p>
                                         </div>
                                     </strong> 
