--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -3,46 +3,43 @@
   padding-top: 125px;
   padding-bottom: 0;
   background-color: var(--bg-color-light);
-margin-right: auto;
-margin-left: auto;
-  @media screen and (min-width:768px){
- padding-bottom: 30px;
-  } 
-   @media screen and (min-width: 1280px) {
-     background-color: var(--text-color-dark-bg);
+  margin-right: auto;
+  margin-left: auto;
+  @media screen and (min-width: 768px) {
+    padding-bottom: 30px;
+  }
+  @media screen and (min-width: 1280px) {
+    background-color: var(--text-color-dark-bg);
     padding-bottom: 0;
-    }
+  }
 }
-.about-wrapper{
+.about-wrapper {
   background-color: var(--bg-color-light);
   height: 100%;
   margin: auto;
   background-repeat: no-repeat;
   background-size: contain;
- 
 
-  @media screen and (max-width:767px){
-  background-position: bottom 61px left 0px;
-  max-width: 480px;
-  background-image: url('../images/about/mobile-sectionbg.png');
- 
+  @media screen and (max-width: 767px) {
+    background-position: bottom 61px left 0px;
+    max-width: 1600px;
+    background-image: url('../images/about/mobile-sectionbg.png');
 
-  @media 
-  screen and (min-device-pixel-ratio: 2) and (min-width: 280px),
-    screen and (min-resolution: 192dpi) and (min-width: 280px),
-    screen and (min-resolution: 2dppx) and (min-width: 280px) {
-    background-image: url('../images/about/mobile-sectionbg@2x.png');
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 280px),
+      screen and (min-resolution: 192dpi) and (min-width: 280px),
+      screen and (min-resolution: 2dppx) and (min-width: 280px) {
+      background-image: url('../images/about/mobile-sectionbg@2x.png');
+    }
   }
-   }
 
-  @media screen and (min-width:768px){
+  @media screen and (min-width: 768px) {
     max-width: 100%;
-} 
-    
+  }
+
   @media screen and (min-width: 1280px) {
     padding-bottom: 65px;
-     background-color: var(--text-color-dark-bg);
-      background-position: bottom 0px left 0px;
+    background-color: var(--text-color-dark-bg);
+    background-position: bottom 0px left 0px;
     background-image: url('../images/about/desktop-sectionbg.png');
   }
 
@@ -51,17 +48,15 @@ margin-left: auto;
     screen and (min-resolution: 2dppx) and (min-width: 1280px) {
     background-image: url('../images/about/desktop-sectionbg@2x.png');
   }
-
-
 }
 .about-image-wrapper {
   @media screen and(max-width:767px) {
-max-width: 280px;
+    max-width: 280px;
   }
   @media screen and(min-width:768px) {
     width: 340px;
   }
-   @media screen and(min-width:1280px) {
+  @media screen and(min-width:1280px) {
     width: 516px;
   }
 }
@@ -69,15 +64,15 @@ max-width: 280px;
 .about-text-content {
   display: block;
   max-width: 220px;
-  
+
   margin: auto;
- 
-  @media screen and (min-width:768px){
+
+  @media screen and (min-width: 768px) {
     max-width: 340px;
     padding-top: 50px;
-     margin: 0;
+    margin: 0;
   }
-   @media screen and (min-width:1280px){
+  @media screen and (min-width: 1280px) {
     max-width: 463px;
     padding-top: 45px;
   }
@@ -96,26 +91,24 @@ max-width: 280px;
     font-size: 14px;
     line-height: 1.714;
   }
-   @media screen and(min-width:1280px) {
+  @media screen and(min-width:1280px) {
     font-size: 16px;
     line-height: 1.76;
   }
 }
-.about-description.paragraph{
+.about-description.paragraph {
   margin-top: 15px;
 }
-.about-text{
-color: var(--text-color-dark);
-margin-bottom: 47px;
-@media screen and(min-width:768px) {
-     margin-bottom: 35px;
+.about-text {
+  color: var(--text-color-dark);
+  margin-bottom: 47px;
+  @media screen and(min-width:768px) {
+    margin-bottom: 35px;
   }
 }
 .about-description,
 .modal-description {
   color: var(--text-color-light);
- 
-   
 }
 .about-image {
   width: 100%;
@@ -124,22 +117,22 @@ margin-bottom: 47px;
 .about-title {
   font-family: var(--title-font);
   font-weight: normal;
- 
+
   text-align: center;
   text-transform: uppercase;
   color: var(--label-color);
 }
-.about-label{
- font-size: 18px;
+.about-label {
+  font-size: 18px;
   line-height: 1.166;
 
-   @media screen and(min-width:768px) {
+  @media screen and(min-width:768px) {
     font-size: 26px;
-     line-height: 1.145;
+    line-height: 1.145;
   }
   @media screen and(min-width:1280px) {
     font-size: 30px;
-}
+  }
 }
 .about-title {
   font-size: 34px;
@@ -152,33 +145,33 @@ margin-bottom: 47px;
   @media screen and(min-width:768px) {
     font-size: 48px;
     margin-bottom: 50px;
-}
- @media screen and(min-width:1280px) {
+  }
+  @media screen and(min-width:1280px) {
     font-size: 58px;
-}
+  }
 }
 .button-about {
   display: flex;
   align-items: center;
   text-align: center;
-   margin-top: 17px;
+  margin-top: 17px;
+  padding: 13px 0;
   max-width: 176px;
   width: 100%;
-  height: 44px;
   font-weight: bold;
   font-size: 14px;
   line-height: 1.285;
-  
+
   color: var(--main-dark-color);
   background-color: var(--text-color-dark-bg);
   border-radius: 22px;
   border: none;
   justify-content: center;
   cursor: pointer;
-transition: background-color var(--transition-duration) var(--timing-function);
+  transition: background-color var(--transition-duration) var(--timing-function);
   @media screen and(min-width:768px) {
-     margin-top: 60px;
-} 
+    margin-top: 60px;
+  }
   &::after {
     content: '';
     margin-left: 18px;
@@ -186,7 +179,7 @@ transition: background-color var(--transition-duration) var(--timing-function);
     width: 5px;
     height: 8px;
     background-image: url('../images/icon-send.svg');
-    background-position: center; 
+    background-position: center;
   }
 
   &:hover,
@@ -194,12 +187,11 @@ transition: background-color var(--transition-duration) var(--timing-function);
     background-color: var(--hover-light-bg-btn);
   }
 }
-.about-content{
-  @media screen and(min-width:768px){
+.about-content {
+  @media screen and(min-width:768px) {
     display: flex;
     justify-content: space-between;
   }
-  
 }
 
 .backdrop-modal {
@@ -226,36 +218,42 @@ transition: background-color var(--transition-duration) var(--timing-function);
   max-width: 320px;
   height: 95%;
   max-height: 600px;
-  // overflow-y: scroll;
   z-index: 100500;
   background-color: var(--bg-feedback);
   border-radius: 4px;
-   background-image: url('../images/about/mobile-sectionbg.png');
+  background-image: url('../images/about/mobile-sectionbg.png');
   transition: transform var(--transition-duration) var(--timing-function);
+
   .backdrop-modal.is-hidden & {
     transform: translate(-50%, -50%) scale(0.8);
   }
 
-   @media screen and(min-width:768px){
+  @media screen and(min-width:768px) {
     max-width: 450px;
     background-image: url('../images/about/desktop-sectionbg.png');
   }
-   @media screen and(min-width:1280px){
+  @media screen and(min-width:1280px) {
     max-width: 550px;
-   overflow: hidden;
   }
 }
 
-.modal-content{
-height: 100%;
+.modal-content {
+  padding: 20px 20px;
+  height: 100%;
   overflow-y: scroll;
+  @media screen and(min-width:1280px) {
+    overflow: hidden;
+  }
 }
-.modal-close{
+.modal-content:hover .modal-image-cow {
+  transform: scale(1.75) translateY(250px);
+}
+.modal-close {
   position: absolute;
-  top:8px;
-  right: 8px;
-  width: 20px;
-  height: 20px;
+  top: 12px;
+  right: 12px;
+  width: 28px;
+  height: 28px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -271,30 +269,22 @@ height: 100%;
   }
 }
 
-.modal-image-cow{
+.modal-image-cow {
   position: relative;
   width: 75px;
   height: 75px;
-animation-name: mymove;
-  animation-duration: 250ms;
-  animation-timing-function: linear;
-  animation-name: scale;
-  animation-fill-mode: forwards;
-  transform-origin: center left;
+  transform: scale(1) translateY(0);
+  transition: transform var(--transition-duration) var(--timing-function);
 }
-@keyframes mymove {
 
-  0%   {top: 0px; background-image: url('../images/about/mobile-sectionbg.png'); width: 75px;}
-  100% {top: 200px; background-image: url('../images/about/mobile-sectionbg.png'); width: 150px;}
-}
-.modal-description{
+.modal-description {
   align-items: center;
   max-width: 280px;
   margin: auto;
- @media screen and(min-width:768px){
+  @media screen and(min-width:768px) {
     max-width: 400px;
- }
- @media screen and(min-width:1280px){
+  }
+  @media screen and(min-width:1280px) {
     max-width: 500px;
-}
+  }
 }
