--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -4,91 +4,104 @@
       <p class="about-label">tradition and love</p>
       <h2 class="about-title">how it’s made?</h2>
       <div class="about-content">
-      <div class="about-image-wrapper">
-        <picture>
-          <source
-            srcset="
-              ./images/about/desktop-cow.webp    1x,
-              ./images/about/desktop-cow@2x.webp 2x
-            "
-            media="(min-width: 1280px)"
-            type="image/webp" />
-          <source
-            srcset="
-              ./images/about/desktop-cow.png    1x,
-              ./images/about/desktop-cow@2x.png 2x
-            "
-            media="(min-width: 1280px)" />
-          <source
-            srcset="
-              ./images/about/tablet-cow.webp    1x,
-              ./images/about/tablet-cow@2x.webp 2x
-            "
-            media="(min-width: 768px)"
-            type="image/webp" />
-          <source
-            srcset="
-              ./images/about/tablet-cow.png    1x,
-              ./images/about/tablet-cow@2x.png 2x
-            "
-            media="(min-width: 768px)" />
-          <source
-            srcset="
-              ./images/about/mobile-cow.webp    1x,
-              ./images/about/mobile-cow@2x.webp 2x
-            "
-            media="(min-width: 280px)"
-            type="image/webp" />
-          <source
-            srcset="
-              ./images/about/mobile-cow.png    1x,
-              ./images/about/mobile-cow@2x.png 2x
-            "
-            media="(min-width: 280px)" />
-          <img
-            src="./images/about/mobile-cow.png"
-            class="about-image"
-            alt="cow and milk"
-        /></picture>
-      </div>
-      <div class="about-text-content">
-        <p class="about-text">
-          Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
-          cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
-          justo fringilla.
-        </p>
-        <p class="about-description">
-          Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
-          Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
-          suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-          tincidunt. 
-         <p class="about-description paragraph"> Aliquam erat volutpat. Aenean accumsan.</p>
-        </p>
+        <div class="about-image-wrapper">
+          <picture>
+            <source
+              srcset="
+                ./images/about/desktop-cow.webp    1x,
+                ./images/about/desktop-cow@2x.webp 2x
+              "
+              media="(min-width: 1280px)"
+              type="image/webp" />
+            <source
+              srcset="
+                ./images/about/desktop-cow.png    1x,
+                ./images/about/desktop-cow@2x.png 2x
+              "
+              media="(min-width: 1280px)" />
+            <source
+              srcset="
+                ./images/about/tablet-cow.webp    1x,
+                ./images/about/tablet-cow@2x.webp 2x
+              "
+              media="(min-width: 768px)"
+              type="image/webp" />
+            <source
+              srcset="
+                ./images/about/tablet-cow.png    1x,
+                ./images/about/tablet-cow@2x.png 2x
+              "
+              media="(min-width: 768px)" />
+            <source
+              srcset="
+                ./images/about/mobile-cow.webp    1x,
+                ./images/about/mobile-cow@2x.webp 2x
+              "
+              media="(min-width: 280px)"
+              type="image/webp" />
+            <source
+              srcset="
+                ./images/about/mobile-cow.png    1x,
+                ./images/about/mobile-cow@2x.png 2x
+              "
+              media="(min-width: 280px)" />
+            <img
+              src="./images/about/mobile-cow.png"
+              class="about-image"
+              alt="cow and milk"
+          /></picture>
+        </div>
+        <div class="about-text-content">
+          <p class="about-text">
+            Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel
+            justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend
+            erat at justo fringilla.
+          </p>
+          <p class="about-description">
+            Curabitur lacinia enim at ex blandit, vel pellentesque odio
+            elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum
+            euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras
+            massa nibh, tincidunt.
+          </p>
+          <p class="about-description paragraph">
+            Aliquam erat volutpat. Aenean accumsan.
+          </p>
 
-        <button type="button" class="button-about" data-modal-open>
-          Read more
-        </button>
-      </div>
+          <button type="button" class="button-about" data-modal-open>
+            Read more
+          </button>
+        </div>
       </div>
     </div>
   </div>
   <div class="backdrop-modal is-hidden" data-modal>
     <div class="modal">
-     
       <button type="button" class="modal-close" data-modal-close>
         <svg width="11" height="11" class="modal-window__icon">
           <use href="./images/sprite.svg#close"></use>
         </svg>
       </button>
-       <div class=" modal-content">
-      <div class="modal-image-cow">
-        <img
+      <div class="modal-content">
+        <div class="modal-image-cow">
+          <img
             src="./images/about/mobile-cow.png"
             class="about-image"
             alt="cow and milk"
-        />
-      </div>
-      <p class="modal-description"> Lac lactis 's villa productum linea DE GENERIBUS includit - 2.5% 3.2% adipem et naturalis lac, capulus lac panem et lac. Pasteurized et in omnibus sit amet commodo recenti vapore lac adeoque corpus effectum positivum. Denique usus vestigium elementa tenet omnia nutrimentum. 'Ante omnia, quae divinando valet pasteurization est - non sterilitate, non est artificialis in locum vivere lac lac et aridam. Haec est ratio quae caliditas non lacte calentem ad ulcus. - Et hoc concedit te perdere microflora et impedit eum ab externis humani corporis intrantes, quamquam in omnibus proprietatibus utilis uber. Et hoc est testimonium nostrum quidem in eo quod lac lactis est pro idoneam ad domum products.</p>
+          />
+        </div>
+        <p class="modal-description">
+          Lac lactis 's villa productum linea DE GENERIBUS includit - 2.5% 3.2%
+          adipem et naturalis lac, capulus lac panem et lac. Pasteurized et in
+          omnibus sit amet commodo recenti vapore lac adeoque corpus effectum
+          positivum. Denique usus vestigium elementa tenet omnia nutrimentum.
+          'Ante omnia, quae divinando valet pasteurization est - non
+          sterilitate, non est artificialis in locum vivere lac lac et aridam.
+          Haec est ratio quae caliditas non lacte calentem ad ulcus. - Et hoc
+          concedit te perdere microflora et impedit eum ab externis humani
+          corporis intrantes, quamquam in omnibus proprietatibus utilis uber. Et
+          hoc est testimonium nostrum quidem in eo quod lac lactis est pro
+          idoneam ad domum products.
+        </p>
       </div>
     </div>
   </div>
