добавила анимацию заголовков секций Production Products Advantages
добавила анимацию (shake-slow) заголовков секций Products, Production и жирных циферок в секции Advantages. Анимация   shake-slow которую Максим написал для Hero

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,8 +1,10 @@
 <!--PRODUCTS-->
 <section id="products" class="section-products">
   <div class="container products-container">
-    <p  class="subtitle">100% natural</p>
-    <h2 class="title">Products</h2>
+    <div class="product-animation">
+      <p class="subtitle">100% natural</p>
+      <h2 class="title">Products</h2>
+    </div>
     <ul class="products-list list">
       <li class="products-list-item ice-cream">
         <h3 class="products-item-title">Ice cream</h3>
