--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -18,6 +18,18 @@
   align-items: center;
 }
 
+.product-animation {
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+
+  &:hover {
+    animation-name: shake-slow;
+    animation-duration: 5s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0s;
+  }
+}
+
 .subtitle {
   text-align: center;
   text-transform: uppercase;
