--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,18 +1,48 @@
+.container-contacts {
+  background-color: #fff5f6;
+}
 
 
-.contacts-cards {
+.contacts {
+   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: baseline;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 20px;
 
+   @media screen and (min-width: 768px) {
+     margin: 0;
+     justify-content: space-between;
+  } 
+     @media screen and (min-width: 1200px) {
+     margin: 0;
+     justify-content: center;
+  } 
+}
+
+.contacts-cards {
+    list-style: none;
   padding: 43px 20px;
-  width: 220px;
+  max-width: 220px;
+  width: 100%;
 
   background-color: var(--white);
   border-radius: 24px;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
+      @media screen and (min-width: 1200px) {
+       max-width: 300px;
+       width: 100%;
+
+        &:not(:last-child) {
+        margin-right: 31px;
+        margin-bottom: 0;
+  } 
+      }
 }
 
 .contacts-tittle {
@@ -26,8 +56,13 @@
   line-height: 1.5;
 
   background-color: #f0d1a5;
-  color: var(--tittle-text-color);
+  color: var(--white);
   border-radius: 4px;
+  list-style: none;
+
+     @media screen and (min-width: 1200px) {
+       margin-bottom: 32px;
+     }
 }
 .food {
   background-color: #c2e297;
@@ -47,6 +82,10 @@
   font-weight: 500;
   line-height: 1.5;
   color: var(--grey);
+
+       @media screen and (min-width: 1200px) {
+       margin-bottom: 32px;
+     }
 }
 
 .contacts-work-list {
@@ -57,6 +96,12 @@
   line-height: 1.5;
   border-top: 1px solid #e1e1e1;
   border-bottom: 1px solid #e1e1e1;
+    list-style: none;
+
+     @media screen and (min-width: 1200px) {
+        padding-top: 22px;
+        padding-bottom: 32px;
+     }
 }
 
 .contacts-work-days {
@@ -64,6 +109,11 @@
   font-weight: 500;
   line-height: 1.5;
   margin-top: 10px;
+    list-style: none;
+
+         @media screen and (min-width: 1200px) {
+        margin-top: 15px;
+     }
 }
 
 .contacts-work-time {
@@ -71,10 +121,16 @@
   font-weight: 500;
   line-height: 1.5;
   color: var(--pink);
+    list-style: none;
 }
 
 .contscts-nav {
   margin-top: 25px;
+  list-style: none;
+
+  @media screen and (min-width: 1200px) {
+        margin-top: 32px;
+     }
 }
 
 .contacts-item {
@@ -83,7 +139,41 @@
   color: var(--grey);
 }
 
-.contact-button {
+.list {
+  display: flex;  
+  justify-content: center;
+  flex-direction: column;
+
+     @media screen and (min-width: 768px) {
+     flex-direction: row;
+  } 
+}
+
+.contacts-button-list {
+  margin-bottom: 10px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+     @media screen and (min-width: 768px) {
+     margin-right: 15px;
+     margin-bottom: 0;
+
+      &:last-child {
+      margin-right: 0;
+  }
+  } 
+
+}
+
+
+.contacts-buttons {
+  padding-top: 54px;
+  padding-bottom: 113px;
+
+}
+
+.contact-button-white {
   display: flex;
   justify-content: center;
   padding: 10px 32px;
@@ -107,10 +197,28 @@
   }
 }
 
-.contacts-button-list {
-  margin-bottom: 10px;
+.contact-button-pink {
+  display: flex;
+  justify-content: center;
+  padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
 
-  &:last-child {
-    margin-bottom: 0;
+  background: var(--dark-pink);
+  border-radius: 22px;
+  border: 1px solid var(--dark-pink);
+  min-width: 160px;
+  color: var(--white);
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.312;
+
+  &hover,
+  &fucus {
+    background-color: var(--white);
+    border: 1px solid var(--white);
+    color: var(--dark-pink);
   }
 }
+
+
