--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -5,7 +5,7 @@
   background-image: url(../images/about/m-milk.png);
   background-repeat: no-repeat;
   background-size: contain;
-  background-position-y: bottom;
+  background-position-y: bottom, 61px;
   @media screen and (min-width: 768px) {
     padding-top: 130px;
   }
@@ -160,7 +160,9 @@
   &:focus {
     background-color: var(--dark-accent-color);
     color: var(--button-color);
-    fill: var(--button-color);
+    & > .about-button-icon {
+      fill: var(--button-color);
+    }
   }
   @media screen and (min-width: 768px) {
     margin-left: 0;
@@ -168,7 +170,6 @@
 }
 
 .about-button-icon {
-  fill: currentColor;
   margin-left: 14px;
-  transition: all var(--time) var(--delay);
+  fill: currentColor;
 }
