--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -63,7 +63,7 @@
             </li>          
         </ul>
             
-            <ul class="contacts-btn-list">
+            <ul class="contacts-btn-list">`
                 <li class="contacts-btn-item">
                     <button class="main-button main-button-red contacts-btn-red" type="button" data-modal-open>Our Locations <span class="arrow-btn">&gt;</span></button>
                 </li>
