временно отключили, чтобы не ломался мобайл, пока не разберемся

--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,6 +1,11 @@
 /* ---- grid ---- */
 
 .grid {
+  /* ----временно отключили, чтобы не ломался мобайл, пока не разберемся---- */
+  @media screen and (max-width: 479px) {
+    display: none;
+  }
+
   display: block;
   margin: 0 auto;
 }
