--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -65,7 +65,7 @@
             
             <ul class="contacts-btn-list">`
                 <li class="contacts-btn-item">
-                    <button class="main-button main-button-red contacts-btn-red" type="button" data-modal-open>Our Locations <span class="arrow-btn">&gt;</span></button>
+                    <button class="main-button main-button-red contacts-btn-red" type="button" id="open-button">Our Locations <span class="arrow-btn">&gt;</span></button>
                 </li>
                 <li class="contacts-btn-item">
                     <button class="main-button contacts-btn-white" type="button" data-modal-open2>Franchise <span class="arrow-btn">&gt;</span></button>
@@ -73,9 +73,9 @@
             </ul>   
     </div>
 
-    <div class="backdrop is-hidden" data-modal>
-    <div class="contacts-modal">
-        <button class="contacts-btn-close" type="button" data-modal-close>
+    <div class="backdrop" id="modal-overlay">
+    <div class="contacts-modal" id="modal">
+        <button class="contacts-btn-close" id="close-button" type="button">
             <svg class="close-icon">
                 <use href="./images/sprite.svg#close-icon"></use>
               </svg>
