--- a/src/sass/_about-modal.scss
+++ b/src/sass/_about-modal.scss
@@ -84,10 +84,11 @@ letter-spacing: 0.04em;
 }
 .about-modal {
   position: absolute;
-  width: 500px;
-  height: 581px;
+  width: 90%;
+  height: 90%;
   left: 50%;
   top: 50%;
+  padding: 20px;
   transform: translate(-50%, -50%);
   background-color: #f0e6e6;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
