--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -146,7 +146,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%;
+    width: 90%;
     height: 95%;
     background-image: url("../images/contacts-usa-map.jpg");
     background-size: contain;
@@ -409,3 +409,10 @@
         width: 180px;
     }
 }
+
+.closed {
+  opacity: 0;
+  pointer-events: none;
+}
+
+
