--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -73,8 +73,8 @@
             </ul>   
     </div>
 
-    <div class="backdrop" id="modal-overlay">
-    <div class="contacts-modal" id="modal">
+    <div class="backdrop closed" id="modal-overlay">
+    <div class="contacts-modal closed" id="modal">
         <button class="contacts-btn-close" id="close-button" type="button">
             <svg class="close-icon">
                 <use href="./images/sprite.svg#close-icon"></use>
