--- a/src/sass/_page-hero.scss
+++ b/src/sass/_page-hero.scss
@@ -48,6 +48,10 @@
   z-index: 55;
   left: -120px;
   bottom: -160px;
+  @media screen and (max-width:767px) {
+    width: 171px;
+  height: 410px;
+  }
 }
 .hero-description{
   display: none;
@@ -83,6 +87,9 @@ font-size: 8px;
 line-height: 150%;
 color: $color-main;
 line-height: 12px;
+}
+.hero-rs-second{
+  display: none
 }
 @media screen and (min-width:768px){
   .item-places {
@@ -149,8 +156,8 @@ line-height: 12px;
 }
 
 .circle{
-  left: -120px;
-  bottom: 20px;
+     left: -130px;
+    bottom: 8px;
   width: 324px;
   height: 322px;
 }
