--- a/src/sass/_page-header.scss
+++ b/src/sass/_page-header.scss
@@ -131,6 +131,9 @@
     font-size: 24px;
   }
 }
+.active {
+    color: $color-secondary;
+  }
 .menu-mobile-close {
   width: 18px;
   height: 18px;
