--- a/src/sass/layout/_advanteges.scss
+++ b/src/sass/layout/_advanteges.scss
@@ -1,22 +1,72 @@
-.advanteges_list {
-    margin-right: 70px;
-    margin-left: 20px;
-    margin-top: 38px;
-    width: 230px;
-    height: 156px;
-
-    &:not(:last-child) {
-    margin-bottom: 38px;
-    }
-}
 .advanteges {
     background-color: var(--accent-bgc);
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center 90%;
+    background-position: center 100%;
+   
 }
+.advantges_item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+
+ .advanteges_list {
+     margin-right: 70px;
+     margin-left: 20px;
+    //  margin-top: 38px;
+     width: 230px;
+    height: 156px;
+
+    &:not(:last-child) {
+    margin-bottom: 38px;
+     }
+    
+    &.sunny {
+     &::before {
+        content: '';
+         background-image: url('../images/img-advantages/icon-mobile1.png');
+     }
+    }
+     &.apple {
+     &::before {
+        content: '';
+         background-image: url('../images/img-advantages/icon-mobile2.png');
+     }
+    }
+    &.hurts {
+     &::before {
+        content: '';
+        background-image: url('../images/img-advantages/icon-mobile3.png'); 
+     }
+    }
+ }
 
 
+ @media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+.advanteges_list {
+    &.sunny {
+        &::before {
+           content: '';
+            background-image: url('../images/img-advantages/icon-mobile1@2x.png');
+        }
+       }
+        &.apple {
+        &::before {
+           content: '';
+            background-image: url('../images/img-advantages/icon-mobile2@2x.png');
+        }
+       }
+       &.hurts {
+        &::before {
+           content: '';
+           background-image: url('../images/img-advantages/icon-mobile3@2x.png'); 
+        }
+       }
+    }
+}
 .advanteges_title {
     width: 98px;
     height: 56px;
@@ -27,7 +77,7 @@
     text-transform: uppercase;
     padding-top: 16px;
     text-align: left;
-}
+    }
 
 .advanteges-text {
     width: 230px;
@@ -37,86 +87,185 @@
     font-size: 12px;
     line-height: 1.70;
     color: var(--primary-black-color);
+ }
+
+ @media screen and (min-width: 768px) {
+    .advantges_item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        }
+    
+     .advanteges_list {
+        //  margin-top: 66px;
+         margin-bottom: 136px;
+         margin-left: 36px;
+         width: 180px;
+         height: 226px;
+         display: flex;
+         flex-wrap: wrap;
+   
+         &:not(:last-child) {
+         margin-right: 60px;
+         }
+        &.sunny {
+            &::before {
+               content: '';
+                background-image: url('../images/img-advantages/icon-tablet1.png');
+            }
+           }
+            &.apple {
+            &::before {
+               content: '';
+                background-image: url('../images/img-advantages/icon-tablet2.png');
+            }
+           }
+           &.hurts {
+            &::before {
+               content: '';
+               background-image: url('../images/img-advantages/icon-tablet3.png'); 
+            }
+           }
+        }
+    
+    @media screen and (min-device-pixel-ratio: 2),
+     screen and (min-resolution: 192dpi),
+     screen and (min-resolution: 2dppx) {
+   .advanteges_list {
+    &.sunny {
+        &::before {
+           content: '';
+            background-image: url('../images/img-advantages/icon-tablet1@2x.png');
+        }
+       }
+        &.apple {
+        &::before {
+           content: '';
+            background-image: url('../images/img-advantages/icon-tablet2@2x.png');
+        }
+       }
+       &.hurts {
+        &::before {
+           content: '';
+           background-image: url('../images/img-advantages/icon-tablet3@2x.png'); 
+        }
+       }
+    }
+     }
+
+     .advanteges_title {
+         padding-top: 36px;
+         padding-bottom: 13px;
+         text-align: left;
+         width: 98px;
+         height: 56px;
+         left: 34px;
+         font-weight: 400;
+         font-size: 48px;
+         line-height: 1.14;
+         letter-spacing: 0.04em;
+         text-transform: uppercase;
+     }
+    
+     .advanteges-text {
+
+         width: 180px;
+         height: 71px;
+         left: 34px;
+         font-weight: 700;
+         font-size: 14px;
+         line-height: 1.74;
+         color: var(--primary-black-color);
+     }
+    }
+ 
+ @media screen and (min-width: 1280px) {
+    .advantges_item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        }
+    
+     .advanteges_list {
+        //  margin-top: 39px;
+         margin-bottom: 139px;
+         margin-left: 115px;
+         width: 330px;
+         height: 222px;
+         display: flex;
+         flex-wrap: wrap;
+   
+         &:not(:last-child) {
+         margin-right: 30px;
+         }
+         &.sunny {
+            &::before {
+               content: '';
+                background-image: url('../images/img-advantages/icon-desctop1.png');
+            }
+           }
+            &.apple {
+            &::before {
+               content: '';
+                background-image: url('../images/img-advantages/icon-desctop2.png');
+            }
+           }
+           &.hurts {
+            &::before {
+               content: '';
+               background-image: url('../images/img-advantages/icon-desctop3.png'); 
+            }
+           }
+        }
+    
+    @media screen and (min-device-pixel-ratio: 2),
+     screen and (min-resolution: 192dpi),
+     screen and (min-resolution: 2dppx) {
+   .advanteges_list {
+    &.sunny {
+        &::before {
+           content: '';
+            background-image: url('../images/img-advantages/icon-desctop1@2x.png');
+        }
+       }
+        &.apple {
+        &::before {
+           content: '';
+            background-image: url('../images/img-advantages/icon-desctop2@2x.png');
+        }
+       }
+       &.hurts {
+        &::before {
+           content: '';
+           background-image: url('../images/img-advantages/icon-desctop3@2x.png'); 
+        }
+       }
+    }
 }
 
-@media screen and (min-width: 768px) {
-    .advanteges_list {
-        margin-top: 66px;
-        margin-bottom: 136px;
-        margin-left: 36px;
-        width: 180px;
-        height: 226px;
-        display: flex;
-        flex-wrap: wrap;
-   
-        &:not(:last-child) {
-        margin-right: 60px;
-        }
-    }
+     .advanteges_title {
+         padding-top: 40px;
+         padding-bottom: 15px;
+         text-align: left;
 
-    .advanteges_title {
-        padding-top: 36px;
-        padding-bottom: 13px;
-        text-align: left;
-        width: 98px;
-        height: 56px;
-        left: 34px;
-        font-weight: 400;
-        font-size: 48px;
-        line-height: 1.14;
-        letter-spacing: 0.04em;
-        text-transform: uppercase;
-    }
+         width: 98px;
+         height: 65px;
+         font-weight: 400;
+         font-size: 58px;
+         line-height: 1.13;
+          text-align: right;
+         letter-spacing: 0.04em;
+         text-transform: uppercase;
+     }
     
-    .advanteges-text {
+     .advanteges-text {
 
-        width: 180px;
-        height: 71px;
-        left: 34px;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.74;
-        color: var(--primary-black-color);
-    }
-}
-@media screen and (min-width: 1280px) {
-    .advanteges_list {
-        margin-top: 39px;
-        margin-bottom: 139px;
-        margin-left: 115px;
-        width: 330px;
-        height: 222px;
-        display: flex;
-        flex-wrap: wrap;
-   
-        &:not(:last-child) {
-        margin-right: 30px;
-        }
-    }
-  
-    .advanteges_title {
-        padding-top: 40px;
-        padding-bottom: 15px;
-        text-align: left;
-
-        width: 98px;
-        height: 65px;
-        font-weight: 400;
-        font-size: 58px;
-        line-height: 1.13;
-        // text-align: right;
-        letter-spacing: 0.04em;
-        text-transform: uppercase;
-    }
-    
-    .advanteges-text {
-
-        width: 330px;
-        height: 52px;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.76;
-        letter-spacing: 0.02em;
-        color: var(--primary-black-color);
-    }
+         width: 330px;
+         height: 52px;
+         font-weight: 700;
+         font-size: 16px;
+         line-height: 1.76;
+         letter-spacing: 0.02em;
+         color: var(--primary-black-color);
+     }
 }
