--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -2,6 +2,11 @@
   width: 100%;
   padding: 0 20px;
 
+  .products & {
+    padding-top: 120px;
+    padding-bottom: 100px;
+  }
+
   @media screen and (min-width: 480px) {
     width: 480px;
     margin: 0 auto;
