--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<section class="footer">
+<footer class="footer">
     <div class="container">
         <div class="contaiter-wrapper">
             <div class="footer-title">
@@ -37,9 +37,10 @@
                 </div>
             </div>
         </div>
-
-        <div class="end-footer-container line-footer"></div>
-            <p class="end-text-footer">&copy; 2019 - IceCream. All Rights Reserved.</p>
-        </div>
     </div>
-</section>
+</footer>
+
+<footer class="end-footer-container line-footer">
+    <p class="end-text-footer">&copy; 2019 - IceCream. All Rights Reserved.</p>
+</footer>
+
