--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -1,48 +1,45 @@
-.page-header{
+.page-header {
   width: 100%;
   position: absolute;
   padding-top: 6px;
-  @media screen and (min-width:$tablet){
+  @media screen and (min-width: $tablet) {
     padding-top: 38px;
   }
 }
-.navigation{
-  &__menu{
+.navigation {
+  &__menu {
     display: none;
-    @media screen and(min-width:$desktop){
- display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: -17.5px;
-    z-index: 500;
+    @media screen and(min-width:$desktop) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: -17.5px;
+      z-index: 500;
     }
-   
   }
-  &__item{
+  &__item {
     margin: 17.5px;
   }
 
-  &__link{
+  &__link {
     font-family: DM Sans;
-font-style: normal;
-font-weight: bold;
-font-size: 16px;
-line-height: 21px;
-align-items: center;
-transition: color $trans-duration $trans-time-func;
-color:$white-color;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 21px;
+    align-items: center;
+    transition: color $trans-duration $trans-time-func;
+    color: $white-color;
   }
-  &__container{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
-   &__link:focus,
-    &__link:hover{
-      color: $accent-red-color;
-    }
-
+  &__link:focus,
+  &__link:hover {
+    color: $accent-red-color;
+  }
 }
 
 .menu-burger {
@@ -56,12 +53,11 @@ color:$white-color;
     // @media screen and(min-width:$tablet){
     //  margin-left: 291px;
     // margin-right: 30px;
-    @media screen and(min-width:$desktop){
+    @media screen and(min-width:$desktop) {
       display: none;
     }
-    }
-   
-  
+  }
+
   &__icon {
     width: 22px;
     height: 12px;
@@ -70,25 +66,34 @@ color:$white-color;
 }
 
 .menu {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
-  display: none;
-  transform: translateX(100%)  ;
+  padding: 60px 20px 0 21px;
   background-color: $background-color-mob-menu;
-  z-index: 100;
   width: 250px;
   height: 100vh;
-  
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
   transition: $trans-duration $trans-time-func;
-  @media screen and (min-width:$tablet){
+
+  &.is-open {
+    position: fixed;
+    // transform: translateX(0);
+    transition: $trans-duration $trans-time-func;
+    visibility: revert;
+    opacity: 1;
+    pointer-events: all;
+  }
+
+  @media screen and (min-width: $tablet) {
     width: 254px;
   }
-  @media screen and (min-width:$desktop){
+  @media screen and (min-width: $desktop) {
     display: none;
   }
- 
- 
 
   &__close-btn {
     position: absolute;
@@ -121,41 +126,39 @@ color:$white-color;
       //   display: inline-block;
       width: 91px;
     }
-    &__packing-btn{
-       display: flex;
-  justify-content: center;
-  align-items: baseline;
+    &__packing-btn {
+      display: flex;
+      justify-content: center;
+      align-items: baseline;
     }
   }
-  &__buy-btn-tab{
+  &__buy-btn-tab {
     display: none;
-    @media screen and(min-width:$tablet){
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 160px;
-    height: 44px;
-    border-radius: 22px;
-    background-color: $white-color;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 21px;
-    color: $accent-red-color;
-    z-index: 500;
-    transition: background-color  $trans-time-func $trans-duration;
+    @media screen and(min-width:$tablet) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 160px;
+      height: 44px;
+      border-radius: 22px;
+      background-color: $white-color;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 21px;
+      color: $accent-red-color;
+      z-index: 500;
+      transition: background-color $trans-time-func $trans-duration;
     }
-    @media screen and(min-width:$desktop){
+    @media screen and(min-width:$desktop) {
       margin-left: 110px;
       &:focus,
-    &:hover{
-      background-color: $icon-bkg-color2;
+      &:hover {
+        background-color: $icon-bkg-color2;
+      }
     }
-    }
-    
-    
   }
 
-  &__btn-icon{
+  &__btn-icon {
     width: 7px;
     height: 11px;
     margin-top: 1px;
@@ -168,15 +171,6 @@ color:$white-color;
     height: 8px;
   }
 }
-.menu.is-open {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  transform: translateX(0);
-  transition:  $trans-duration $trans-time-func;
-}
-
 
 .menu-nav {
   width: 100%;
@@ -185,8 +179,7 @@ color:$white-color;
     height: 42px;
     padding-top: 13px;
     padding-bottom: 13px;
-    padding-left: 21px;
-    border: 1px solid #e18298;
+    border-bottom: 1px solid #e18298;
   }
   &__link {
     width: 100%;
@@ -198,10 +191,10 @@ color:$white-color;
 
 .logo {
   z-index: 500;
-  @media screen and (min-width:$tablet){
+  @media screen and (min-width: $tablet) {
     margin-right: 291px;
   }
-  @media screen and (min-width:$desktop){
+  @media screen and (min-width: $desktop) {
     margin-right: 110px;
   }
 }
