--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -176,8 +176,8 @@
 
 .social-icon {
   display: inline-flex;
-  background-size: contain;
-  background-position: 50% 50%;
+  // background-size: cover;
+    background-position: center;
 }
 
 .social-list-footer {
