--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages" id="advantages-sect">
+<section class="advantages" id="advantages-sect" data-aos="zoom-in">
     <div class="container">
         <h1 class="visually-hidden">Наши преимущества</h1>
         <ul class="advantages-list">
