--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" data-aos="zoom-out-right">
     <div class="container footer">
         <div class="footer-title-thumb">
             <a class="footer-main-title" href="./index.html"> homemade ice cream made 
