--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
 <section class="page-hero" id="hero-sect">
     <div class="container">
-        <div class="hero-left-side">
+        <div class="hero-left-side" data-aos="fade-right">
             <div class="padding-left">   
                 <h1 class="hero-title">ice cream
         made with
@@ -29,7 +29,7 @@
                 
         </div>
         </div>
-        <div class="hero-right-side">
+        <div class="hero-right-side" data-aos="fade-up-left">
         <div class="circle">
         </div>
         <picture>
@@ -43,7 +43,7 @@
             <img class="hero-img" src="./images/images/hero/ice-creameMobil@1x.png" alt="">
         </picture>
         </div>
-        <div class="hero-rs-second">
+        <div class="hero-rs-second" data-aos="fade-down-left">
             <ul class="list-places">
                 <li class="item-places milk-description">
                     <p class="hero-places-number">16</p>cafes
