--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,5 +1,7 @@
 
-    <section class="reviews">
+    <section class="reviews" data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="1500">
         <div class="container">
             <h2 class="visually-hidden">Отзывы</h2>
             <ul class="reviews-list">
